# digigrad-test

./: .dockerignore  .env.example  .gitignore  ARCHITECTURE.md  DEPLOYMENT.md  Dockerfile  README.md  RENDER.md  SECURITY.md  WORKSHOP.md  alembic.ini  package-lock.json  package.json  pyproject.toml  render.yaml  start.sh
.github/workflows/: setup-attendee.yml
migrations/: env.py
migrations/versions/: 0001_initial.py
scripts/: memory_demo.py  setup-attendee.js  tunnel_up.sh
src/gradphone/: __init__.py  bot.py  bridge.py  business_agent.py  campaign.py  config.py  db.py  dial.py  email_inbox.py  memory.py  ratelimit.py  sessions.py  tenants.py  translate.py  voice_chat.py  voicemail.py  voices.py  web.py  websearch.py
src/gradphone/static/: app.js  style.css
src/gradphone/templates/: dashboard.html  login.html
tests/: setup-attendee.test.js  test_memory.py  test_smoke.py
