[project]
name = "gradphone"
version = "0.3.0"
description = "Outbound voice agent: Twilio Media Streams + gradbot + multi-tenant SQLite + operator's web switchboard"
requires-python = ">=3.12,<3.13"
dependencies = [
    "gradbot",
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
    "twilio>=9.0.0",
    "aiohttp>=3.9.0",
    "aiosqlite>=0.20.0",
    "sqlalchemy[asyncio]>=2.0.30",
    "alembic>=1.13.0",
    "psycopg[binary]>=3.2.0",
    "python-dotenv>=1.0.0",
    "python-telegram-bot>=21.0",
    "jinja2>=3.1.0",
    "itsdangerous>=2.2.0",
    "python-multipart>=0.0.9",
    "linkup-sdk>=0.2.0",
    "websockets>=12.0",
]

[project.scripts]
gradphone-dial = "gradphone.dial:main"
gradphone-bot = "gradphone.bot:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/gradphone"]

[tool.hatch.build.targets.wheel.force-include]
"src/gradphone/templates" = "gradphone/templates"
"src/gradphone/static" = "gradphone/static"
